# training

buildsystems/: CMakeLists.txt  Makefile
buildsystems/gtest/: CMakeLists.txt  test_mymath.cpp
buildsystems/include/: mymath.h
buildsystems/src/: mymath.cpp
buildsystems/test/: CMakeLists.txt  test.cpp
cppPractice/: ClassApplication.cpp  VirtualFunction.cpp  abstract.cpp
openmp/: dynamic.cpp  guided.cpp  sample1.cpp  static.cpp
